# stablefluids

./: CMakeLists.txt  README.md
include/glad/: glad.h
libs/: glfw3.lib
shaders/: fragmentshader.glsl  vertexshader.glsl
src/: fluidsolver.cpp  fluidsolver.h  glad.c  main.cpp  shader.cpp  shader.h
